[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cenas/imgselect/pause.png" type="Texture" id=1]
[ext_resource path="res://Cenas/imgselect/scrpit_fecharjogo.gd" type="Script" id=2]
[ext_resource path="res://Cenas/imgselect/script_fecharPause.gd" type="Script" id=3]
[ext_resource path="res://Cenas/imgselect/script_voltaTelaselecao.gd" type="Script" id=4]
[ext_resource path="res://Cenas/imgselect/sair.png" type="Texture" id=5]
[ext_resource path="res://Cenas/imgselect/voltarselect.png" type="Texture" id=6]
[ext_resource path="res://Cenas/imgselect/fehcartela.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
position = Vector2( -61.6894, -33.2938 )

[node name="pause" type="Sprite" parent="."]
position = Vector2( 221.227, 129.651 )
scale = Vector2( 0.719664, 0.76338 )
texture = ExtResource( 1 )

[node name="fecharjogo" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 351.92
margin_top = 175.545
margin_right = 363.92
margin_bottom = 195.545
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="clos" type="Sprite" parent="fecharjogo"]
position = Vector2( 5.74353, 10.2655 )
scale = Vector2( 0.248616, 0.248616 )
texture = ExtResource( 5 )

[node name="voltaTelaselecao" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 223.302
margin_top = 176.905
margin_right = 235.302
margin_bottom = 196.905
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="select" type="Sprite" parent="voltaTelaselecao"]
position = Vector2( 5.79083, 9.57715 )
scale = Vector2( 0.257584, 0.257584 )
texture = ExtResource( 6 )

[node name="fecharPause" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 111.276
margin_top = 178.312
margin_right = 123.276
margin_bottom = 198.312
rect_scale = Vector2( 1.39025, 1.0873 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="stop" type="Sprite" parent="fecharPause"]
position = Vector2( 5.3588, 9.35355 )
scale = Vector2( 0.198976, 0.239945 )
texture = ExtResource( 7 )

[connection signal="mouse_entered" from="fecharjogo" to="fecharjogo" method="_on_fecharjogo_mouse_entered"]
[connection signal="mouse_exited" from="fecharjogo" to="fecharjogo" method="_on_fecharjogo_mouse_exited"]
[connection signal="pressed" from="fecharjogo" to="fecharjogo" method="_on_fecharjogo_pressed"]
[connection signal="mouse_entered" from="voltaTelaselecao" to="voltaTelaselecao" method="_on_voltaTelaselecao_mouse_entered"]
[connection signal="mouse_exited" from="voltaTelaselecao" to="voltaTelaselecao" method="_on_voltaTelaselecao_mouse_exited"]
[connection signal="pressed" from="voltaTelaselecao" to="voltaTelaselecao" method="_on_voltaTelaselecao_pressed"]
[connection signal="mouse_entered" from="fecharPause" to="fecharPause" method="_on_fecharPause_mouse_entered"]
[connection signal="mouse_exited" from="fecharPause" to="fecharPause" method="_on_fecharPause_mouse_exited"]
[connection signal="pressed" from="fecharPause" to="fecharPause" method="_on_fecharPause_pressed"]
